--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <caption> <a href="https://www.billboard.com/charts/hot-100"><b>billboard top <em>five</em> standings </b></a> </caption>
     <tr>
       <td> <b>1</b></td>
-      <td><a href="https://www.youtube.com/watch?v=lEIqjoO0-Bs">Megan Thee Stallion - Savage Remix (feat. Beyoncé)</a></td>
+      <td><a href="https://youtu.be/lEIqjoO0-Bs">Megan Thee Stallion - Savage Remix (feat. Beyoncé)</a></td>
 
     </tr>
     <tr>
@@ -43,10 +43,10 @@
   </table>
   <hr>
   <div class="buttons ">
-    <button type="button" class="home coustom" onclick="index.html"><a  class="onclick" href="index.html">Home</a> <img src="images/home.png" alt="`home img"> </button>
-    <button type="button" class="sub coustom" onclick="subscribe.html"><a class="onclick"  href="subscribe.html">subscribe</a> <img src="images/subscribe.png" alt="img"> </button>
-    <button type="button" class="news coustom" name="button" onabort=""><a  class="onclick" href="https://www.billboard.com/news">news</a> <img src="images/news.png" alt="img"> </button>
-    <button type="button" class="log-in coustom" onclick="" name="button"><a  class="onclick" href="login.html">login</a> <img src="images/login.png" alt="image"> </button>
+    <button type="button" class="home coustom" onclick="index.html"><a  class="onclick" href="index.html">Home <img src="images/home.png" alt="`home img"></a> </button>
+    <button type="button" class="sub coustom" onclick="subscribe.html"><a class="onclick"  href="subscribe.html">subscribe <img src="images/subscribe.png" alt="img"></a> </button>
+    <button type="button" class="news coustom" name="button" onabort=""><a  class="onclick" href="https://www.billboard.com/news">news <img src="images/news.png" alt="img"></a> </button>
+    <button type="button" class="log-in coustom" onclick="" name="button"><a  class="onclick" href="login.html">login <img src="images/login.png" alt="image"></a> </button>
     <div class="search">
       <h2>enter the song name</h2>
       <input type="search" name="" value="">
@@ -57,13 +57,13 @@
 
 
     <div class="album">
-      <h3><button type="button" class="c-album coustom" name="button"><a class="onclick"href="create album.html">create album</a> <img src="images/music.png" alt=""> </button> </h3>
-      <h3> <button type="button" class="y-album coustom" name="button"><a class="onclick"href="your songs.html">your songs</a> <img src="images/headphones.png" alt="headphone img"> </button></h3>
+      <h3><button type="button" class="c-album coustom" name="button"><a class="onclick"href="create album.html">create album <img src="images/music.png" alt=""></a> </button> </h3>
+      <h3> <button type="button" class="y-album coustom" name="button"><a class="onclick"href="your songs.html">your songs<img src="images/headphones.png" alt="headphone img"></a>  </button></h3>
 
 
     </div>
     <div class="">
-      <h3> <button type="button" class="request-song coustom" name="button"><a class="onclick"href="request song.html">request song</a> <img src="images/request.png" alt=""> </button> </h3>
+      <h3> <button type="button" class="request-song coustom" name="button"><a class="onclick"href="request song.html">request song<img src="images/request.png" alt=""></a>  </button> </h3>
 
     </div>
     <div class="corona">
